# candle-onnx-ng

./: .gitignore  Cargo.toml  README.md
src/: eval.rs  lib.rs  parser.rs
src/ops/: compute_node.rs  mod.rs  onnxop.rs  tensor_helper.rs
src/ops/array/: arg.rs  cast.rs  concat.rs  constant.rs  constshape.rs  expand.rs  flatten.rs  gather.rs  mod.rs  pad.rs  random.rs  range.rs  reshape.rs  shape.rs  size.rs  slice.rs  split.rs  squeeze.rs  transpose.rs  unsqueeze.rs
src/ops/control/: if.rs  mod.rs
src/ops/logic/: basics.rs  mod.rs
src/ops/math/: add.rs  basics.rs  clip.rs  cmp.rs  cumsum.rs  div.rs  exp.rs  gemm.rs  matmul.rs  mod.rs  mul.rs  sign.rs  sqrt.rs  sub.rs
src/ops/nn/: avgpool.rs  basics.rs  batchnorm.rs  conv.rs  dropout.rs  log_softmax.rs  maxpool.rs  mod.rs  reduce.rs  softmax.rs
src/ops/rnn/: lstm.rs  mod.rs
tests/: add.rs  array_arg.rs  array_cast.rs  array_concat.rs  array_constant.rs  array_constshape.rs  array_expand.rs  array_flatten.rs  array_gather.rs  array_pad.rs  array_random_normal.rs  array_random_uniform.rs  array_range.rs  array_shape.rs  array_size.rs  array_slice.rs  array_split.rs  array_squeeze.rs  array_transpose.rs  array_unsqueeze.rs  control_if.rs  div.rs  exp.rs  logic_basics.rs  math_basics.rs  math_clip.rs  math_cmp.rs  math_cumsum.rs  math_gemm.rs  math_matmul.rs  math_sqrt.rs  mul.rs  nn_basics.rs  nn_conv.rs  nn_dropout.rs  nn_log_softmax.rs  nn_maxpool.rs  nn_reduce_l2.rs  nn_reduce_max.rs  nn_reduce_mean.rs  (+8 more)
