[package]
name = "candle-onnx-ng"
version = "0.0.1"
edition = "2021"

description = "ONNX support for Candle"
repository = "https://github.com/imihalcea/candle-onnx-ng"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle-core = "0.8.0"
candle-nn = "0.8.0"
prost = "0.13.3"
once_cell = "1.20.2"

[build-dependencies]
prost-build = "0.13.3"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
